src/main/metadata/objects/Dealer_Score__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Branch_Name__c</fullName>
        <formula>Dealer_Name__r.Branch_name_CHS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Scores</relationshipLabel>
        <relationshipName>Dealer_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score_Month__c</fullName>
        <label>Score Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Score Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Year__c</fullName>
        <label>Score Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealer Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Dealer_Branch_Name__c</columns>
        <columns>Score_Year__c</columns>
        <columns>Score_Month__c</columns>
        <columns>Score__c</columns>
        <columns>Score_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS-{00000000}</displayFormat>
        <label>Dealer Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_Record_When_Status_is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  PRIORVALUE(Score_Status__c),
  ISCHANGED(Score_Status__c),
  ISCHANGED(Score__c),
  $Profile.Name != &apos;IntegrationAPI&apos;,
  $Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorMessage>You cann&apos;t update this record when status is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_should_greater_than_zero</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Score_Status__c, 
or( 
NOT(Score__c &gt; 0), 
ISNULL(Score__c) 
), 
$Profile.Name != &apos;IntegrationAPI&apos;, 
$Profile.Name != &apos;System Administrator&apos; 
)</errorConditionFormula>
        <errorMessage>Score shoulde greater than 0.</errorMessage>
    </validationRules>
</CustomObject>